--- a/src/app/equa-diff/equa-diff.component.html
+++ b/src/app/equa-diff/equa-diff.component.html
@@ -26,7 +26,7 @@
       Comment visualiser ?
     </h3>
     <p>
-      Pour visualiser une équation différencielles de la forme vue précédemment, il suffit de fixer la valeur \(dx = 1\), et pour \(dy\) écrire \(dy = f(x, y(x))\).
+      Pour visualiser une équation différencielles de la forme vue précédemment, il suffit de fixer la valeur \(dx = 1\) et pour \(dy\) écrire \(dy = f(x, y(x))\).
       Les particules suivront alors le tracé des fonctions solutions.<br>
       Nous allons voir plus tard pourquoi cela marche.
     </p>
@@ -38,7 +38,7 @@
     <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=x&t=0&minT=0&maxT=10&xRange=-2&xRange=2&yRange=-2&yRange=2&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e1.png">
     </a>
-    <span class="footnote center-align">click on images to open the simulation in a new tab</span>
+    <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
   </div>
   <div class="container">
     <p>
@@ -58,10 +58,10 @@
     </p>
     <p>
       Pour que le calcul de la dérivée soit exact, il faudrait faire tendre \(dx\) vers \(0\).
-      Mais pour faire une approximation de la dérivée, on peut fixer la valeur de \(dx\), par exemple à \(1\), on a alors \({{der}} = dy\).
+      Mais pour faire une approximation de la dérivée, on peut fixer la valeur de \(dx\), par exemple à \(1\).
       <br>Or, ce que l'on cherche à avoir, en tout point de la trajectoire des particules, est que \({{diff1D}}\).
       <br>Donc en forçant \(dy\) à avoir \(f(x, y(x)))\) comme expression,
-      et en fixant \(dx = 1\), on s'assure que les particules aient comme trajectoire une solution à l'équation différencielles.
+      et en fixant \(dx = 1\), on s'assure que les particules ont comme trajectoire une solution à l'équation différencielle.
     </p>
   </div>
   <h3>
@@ -71,7 +71,7 @@
     <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=cos(3%20*%20x)%20*%20sin(2%20*%20y%20*%20x%20%2B%201)&t=0&minT=0&maxT=10&xRange=-4&xRange=4&yRange=-4&yRange=4&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e2.png">
     </a>
-    <span class="footnote center-align">click on images to open the simulation in a new tab</span>
+    <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
   </div>
   <div class="container">
     <p>
@@ -113,7 +113,7 @@
     <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=y&y=-x&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e3.png">
     </a>
-    <span class="footnote center-align">click on images to open the simulation in a new tab</span>
+    <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
   </div>
   <div class="container">
     <p>
@@ -141,7 +141,7 @@
     <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=x*y%20-%20y*y&y=-cos(3*x%20%2By)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e4.png">
     </a>
-    <span class="footnote center-align">click on images to open the simulation in a new tab</span>
+    <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
   </div>
   <div class="container">
     <p>
@@ -163,7 +163,7 @@
     <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/?x=x*x-y*y&y=2*x*y*z&z=-cos(x%20%2B%20x)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&zRange=-1&zRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&showCube=true&showAxes=true&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e5.png">
     </a>
-    <span class="footnote center-align">click on images to open the simulation in a new tab</span>
+    <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
   </div>
   <div class="container">
     <p>
@@ -177,7 +177,7 @@
 
 <div *ngIf="language == 'en'" class="all-container">
   <div class="container">
-    <h1>Visualize Differential Equations</h1>
+    <h1>Visualize differential equations</h1>
     <h2 class="subtitle">with <a class="subtitle" href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a></h2>
     <h2>
       One-dimensional equations
@@ -195,7 +195,7 @@
       How to visualize?
     </h3>
     <p>
-      To visualize a differential equation of the form seen previously, one just has to set the value \(dx = 1\), and for \(dy\) write \(dy = f(x, y(x))\).
+      To visualize a differential equation of the form seen previously, one just has to set the value \(dx = 1\) and for \(dy\) write \(dy = f(x, y(x))\).
       The particles will then follow the path of the solution functions.
       <br>
       We will see later why this works.
@@ -227,7 +227,7 @@
     </p>
     <p>
       For the calculation of the derivative to be exact, \(dx\) should tend to \(0\).
-      But to make an approximation of the derivative, we can fix the value of \(dx\), for example at \(1\), we then have \({{der}} = dy\).
+      But to make an approximation of the derivative, we can fix the value of \(dx\), for example at \(1\).
       <br>Now, what we want to have, at any point in the trajectory of the particles, is that \({{diff1D}}\).
       <br>So by forcing \(dy\) to have \(f(x, y(x)))\) as an expression, and setting \(dx = 1\),
       we ensure that the particles have as trajectory a solution to the differential equation.
@@ -286,7 +286,6 @@
   </div>
   <div class="container">
     <p>
-      Résultats de traduction
       The solutions to this system of differential equations can be shown to be concentric circles of different radii, which depend on the initial conditions.
       <br>This is, once again, exactly what we see on the simulation: the particles turn around the center in a circular pattern.
     </p>
