changed selection color + background

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,13 @@ a:focus {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: rgb(27, 171, 218);
+}
+
+::selection {
+  color: white;
+  background: rgb(27, 171, 218);
+}
