--- a/src/app/equa-diff/equa-diff.component.html
+++ b/src/app/equa-diff/equa-diff.component.html
@@ -12,11 +12,9 @@
     <h2 class="subtitle">avec <a class="subtitle" href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a></h2>
     <p>
       <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> permet de représenter les champs de vecteurs 
-      de manière visuelle, en simulant des milliers de particules qui suivent le champs de vecteurs.
-      <br>Pour controler l'expression du champs, on utilise \(dx\), \(dy\) (et \(dz\)) du panneau de gauche de l'application.
-      Ce sont des fonctions qui dictent le déplacement de la particule à chaque instant de la simulation, en fonction de sa position et du temps.
-      Par exemple, si \(dx = 1\) et \(dy = 1\), alors les particules se déplacerons de une unité vers la droite et une vers le haut à chaque instant de la simulation.
-      <br>Dans cet article, nous allons expliquer comment utiliser <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> pour visualiser les solutions aux équations différentielles. 
+      de manière visuelle, en simulant des milliers de particules.
+      Dans cet article, nous allons voir comment utiliser <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a>
+      pour visualiser les solutions aux équations différentielles. 
     </p>
     <h2>
       Equations à une dimension
@@ -188,11 +186,8 @@
     <h1>Visualize differential equations</h1>
     <h2 class="subtitle">with <a class="subtitle" href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a></h2>
     <p>
-      <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> makes it possible to represent vector fields in a visual way by simulating thousands of particles which follow the vector field.
-      <br>To control the expression of the field we use \(dx\), \(dy\) (and \(dz\)) from the left panel of the application. 
-      These are functions that dictate the movement of the particle at each moment of the simulation depending on its position and time.
-      For example, if \(dx\) = 1 and \(dy\) = 1 then the particles will move one unit to the right and one unit up at each instant of the simulation.
-      <br>In this article, you will understand how to use <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> to visualize solutions to differential equations.
+      <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> lets you visually represent vector fields by simulating thousands of particles. 
+      In this article you will learn how to use <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> to visualize solutions to differential equations.
     </p>
     <h2>
       One-dimensional equations
