--- a/src/app/equa-diff/equa-diff.component.html
+++ b/src/app/equa-diff/equa-diff.component.html
@@ -237,7 +237,7 @@
     </p>
     <p>
       For the calculation of the derivative to be exact, \(dx\) should tend to \(0\).
-      But to make an approximation of the derivative, we can fix the value of \(dx\), for example at \(1\).
+      But to make an approximation of the derivative, we can fix the value of \(dx\), for example to \(1\).
       <br>Now, what we want to have, at any point in the trajectory of the particles, is that \({{diff1D}}\).
       <br>So by forcing \(dy\) to have \(f(x, y(x)))\) as an expression, and setting \(dx = 1\),
       we ensure that the particles have as trajectory a solution to the differential equation.
