--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -112,7 +112,10 @@
   </div>
   <div class="divider field-divider"></div>
   <div class="github-text">
-    Checkout <a href="https://github.com/starrfree/vector-field-website/tree/3d" class="github-a">Github</a> for help.
+    Checkout <a href="https://github.com/starrfree/vector-field-website" target="_blank" rel="noopener noreferrer" class="github-a">Github</a> for help.
+    <br>
+    <br>
+    To understand how to visualize differential equations using Vector Field <a href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/help" target="_blank" rel="noopener noreferrer" class="github-a">click here</a>
   </div>
 </div>
 <!-- 
