changed links to .starfree.app

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -90,7 +90,7 @@
     Checkout <a href="https://github.com/starrfree/vector-field-website" target="_blank" rel="noopener noreferrer" class="github-a">Github</a> for help.
     <br>
     <br>
-    To understand how to visualize differential equations using Vector Field <a href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/help" target="_blank" rel="noopener noreferrer" class="github-a" (click)="removeSnackbar()">click here</a>
+    To understand how to visualize differential equations using Vector Field <a href="https://vectorfield3d.starfree.app/help" target="_blank" rel="noopener noreferrer" class="github-a" (click)="removeSnackbar()">click here</a>
   </div>
 </div>
 <!-- 
